k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eduhub-services-ingress
  namespace: eduhub
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://app.eduhub.unboxed.name.ng,https://dqv9z5qke0ay5.cloudfront.net"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.eduhub.unboxed.name.ng
    secretName: eduhub-api-tls
  rules:
  - host: api.eduhub.unboxed.name.ng
    http:
      paths:
      - path: /notifications(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: notification-service
            port:
              number: 3000
      - path: /catalog(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: catalog-service
            port:
              number: 8000
      - path: /assignment(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: assignment-service
            port:
              number: 5000
      - path: /video(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: video-service
            port:
              number: 3003
